Bug 1616797 - Check that accessible's frame still exists in scroll dispatcher r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D63546